# epiphany

./: configure.ac
data/: org.gnome.epiphany.gschema.xml
embed/: ephy-web-view.c  ephy-web-view.h
lib/: ephy-prefs.h
lib/egg/: Makefile.am  egg-suggestion-popover.c  egg-suggestion.h  egg.gresources.xml  eggtreemultidnd.c
lib/widgets/: ephy-location-entry.c  ephy-location-entry.h
src/: Makefile.am  ephy-location-controller.c  ephy-shell.c  ephy-shell.h  ephy-suggestion-model.c  ephy-suggestion-model.h  epiphany.gresource.xml  prefs-dialog.c
src/bookmarks/: ephy-add-bookmark-popover.c  ephy-bookmark-properties-grid.c  ephy-bookmark.c  ephy-bookmark.h  ephy-bookmarks-import.c  ephy-bookmarks-manager.c
src/profile-migrator/: Makefile.am  ephy-profile-migrator.c
src/resources/gtk/: prefs-dialog.ui
src/sync/: ephy-sync-crypto.c  ephy-sync-crypto.h  ephy-sync-secret.c  ephy-sync-secret.h  ephy-sync-service.c  ephy-sync-service.h  ephy-sync-utils.c  ephy-sync-utils.h  ephy-synchronizable-manager.c  ephy-synchronizable-manager.h  ephy-synchronizable.c  ephy-synchronizable.h
